--- a/svelte-typescript-app/package.json
+++ b/svelte-typescript-app/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@rollup/plugin-replace": "^2.4.2",
     "@types/echarts": "^4.9.7",
     "echarts": "^5.0.2",
     "echarts-for-svelte": "^0.1.11",
